force-app/main/default/objects/Opportunity/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <inlineHelpText>The actual date on which the opportunity was closed and the IO was signed. Please populate this field as &quot;Close Date&quot; gets updated when edits are made to Close/Won opps</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>