force-app/main/default/objects/Opportunity/fields/Ad_Ops_Manager__c.field-meta.xml
<CustomField>
    <fullName>Ad_Ops_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Ad Ops Manager responsible for executing the campaign</description>
    <inlineHelpText>Identifies the Ad Ops Manager responsible for executing the campaign</inlineHelpText>
    <label>Ad Ops Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>OPS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>