force-app/main/default/objects/Opportunity/fields/AdSales_CF_Age_Demo__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Age_Demo__c</fullName>
    <label>Age Demo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 13</fullName>
            </value>
            <value>
                <fullName>13-17</fullName>
            </value>
            <value>
                <fullName>18-24</fullName>
            </value>
            <value>
                <fullName>25-34</fullName>
            </value>
            <value>
                <fullName>35-44</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>