force-app/main/default/objects/Opportunity/fields/AdSales_CF_Budget_Options__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Budget_Options__c</fullName>
    <label>Budget Options</label>
    <length>50</length>
    <type>Text</type>
</CustomField>