force-app/main/default/objects/Opportunity/fields/AdSales_CF_Campaign_Stage__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Campaign_Stage__c</fullName>
    <label>Campaign Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Launch</fullName>
            </value>
            <value>
                <fullName>Post-Launch</fullName>
            </value>
            <value>
                <fullName>Live-Service</fullName>
            </value>
            <value>
                <fullName>Season</fullName>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>