force-app/main/default/objects/Opportunity/fields/AdSales_CF_Client_Solutions_Manager__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Client_Solutions_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Solutions Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Client_Solution_Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>