force-app/main/default/objects/Opportunity/fields/AdSales_CF_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Contract_Id__c</fullName>
    <description>Holds the Original IO # generated by the contracting system of record</description>
    <inlineHelpText>Holds the Original IO # generated by the contracting system of record</inlineHelpText>
    <label>CMS Contract ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>