force-app/main/default/objects/Opportunity/fields/AdSales_CF_CP_Manager_MailID__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_CP_Manager_MailID__c</fullName>
    <label>CP-Manager-MailID</label>
    <type>Email</type>
</CustomField>