force-app/main/default/objects/Opportunity/fields/AdSales_CF_CSM_Manager_MailId__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_CSM_Manager_MailId__c</fullName>
    <label>CSM-Manager-MailId</label>
    <type>Email</type>
</CustomField>