force-app/main/default/objects/Opportunity/fields/AdSales_CF_Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Deal_Number__c</fullName>
    <label>Deal Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>