force-app/main/default/objects/Opportunity/fields/AdSales_CF_KPI__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_KPI__c</fullName>
    <label>KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Views</fullName>
            </value>
            <value>
                <fullName>Imp/Delivery</fullName>
            </value>
            <value>
                <fullName>Total Reach</fullName>
            </value>
            <value>
                <fullName>Audience Reach</fullName>
            </value>
            <value>
                <fullName>Sales/Revenue</fullName>
            </value>
            <value>
                <fullName>Downloads</fullName>
            </value>
            <value>
                <fullName>VCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>