force-app/main/default/objects/Opportunity/fields/AdSales_CF_Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Opportunity_Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Created Date</label>
    <type>DateTime</type>
</CustomField>