force-app/main/default/objects/Opportunity/fields/AdSales_CF_Product_Vertical__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Product_Vertical__c</fullName>
    <label>Product Vertical (advertised product)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Game - Standard</fullName>
            </value>
            <value>
                <fullName>Full Game - Deluxe</fullName>
            </value>
            <value>
                <fullName>Add-on/DLC</fullName>
            </value>
            <value>
                <fullName>Pre-order</fullName>
            </value>
            <value>
                <fullName>Game Demo</fullName>
            </value>
            <value>
                <fullName>Full Game - VR</fullName>
            </value>
            <value>
                <fullName>Live Service/Free to play</fullName>
            </value>
            <value>
                <fullName>Free to Play</fullName>
            </value>
            <value>
                <fullName>Movies - Home Entertainment</fullName>
            </value>
            <value>
                <fullName>Movies - Theatrical</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods</fullName>
            </value>
            <value>
                <fullName>Quick Service Restaurants</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>