force-app/main/default/objects/Opportunity/fields/AdSales_CF_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Start_Date__c</fullName>
    <inlineHelpText>Date when campaign is expected to start.</inlineHelpText>
    <label>Opportunity Start Date</label>
    <type>Date</type>
</CustomField>