force-app/main/default/objects/Opportunity/fields/AdSales_CF_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>AdSales_CF_Total_Revenue__c</fullName>
    <inlineHelpText>Projected revenue of the IO at the time of Opportunity creation</inlineHelpText>
    <label>Projected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>