force-app/main/default/objects/Opportunity/fields/Advertiser_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Vertical__c</fullName>
    <label>Advertiser Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endemic</fullName>
            </value>
            <value>
                <fullName>Non-Endemic</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Native App</fullName>
            </value>
            <value>
                <fullName>DNA Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>