force-app/main/default/objects/Opportunity/fields/Advertising_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Revenue_Share__c</fullName>
    <label>Advertising Revenue Share</label>
    <type>TextArea</type>
</CustomField>