force-app/main/default/objects/Opportunity/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SIE_RT_Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Agency)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>