force-app/main/default/objects/Opportunity/fields/AgencyNameFormula__c.field-meta.xml
<CustomField>
    <fullName>AgencyNameFormula__c</fullName>
    <formula>IF(NOT(ISBLANK( Agency_Name__c )),  Agency_Name__r.Name , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>