force-app/main/default/objects/Opportunity/fields/APDA_BPAF__c.field-meta.xml
<CustomField>
    <fullName>APDA_BPAF__c</fullName>
    <label>APDA BPAF #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>