force-app/main/default/objects/Opportunity/fields/APDA_BPAF_Submitted__c.field-meta.xml
<CustomField>
    <fullName>APDA_BPAF_Submitted__c</fullName>
    <label>APDA BPAF Submitted</label>
    <type>Date</type>
</CustomField>