force-app/main/default/objects/Opportunity/fields/App_Category__c.field-meta.xml
<CustomField>
    <fullName>App_Category__c</fullName>
    <inlineHelpText>Select as many applicable app categories.</inlineHelpText>
    <label>App Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Augmented Reality</fullName>
            </value>
            <value>
                <fullName>Books &amp; Comics</fullName>
            </value>
            <value>
                <fullName>Commerce/Shopping</fullName>
            </value>
            <value>
                <fullName>Communication (Text/Video/Voice)</fullName>
            </value>
            <value>
                <fullName>Creative/Art</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>GPS/LBS/Navigation</fullName>
            </value>
            <value>
                <fullName>Health &amp; Fitness</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>News &amp; Weather</fullName>
            </value>
            <value>
                <fullName>Novelty</fullName>
            </value>
            <value>
                <fullName>Photo (Browsing/Sharing)</fullName>
            </value>
            <value>
                <fullName>Podcasts</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Serious Game</fullName>
            </value>
            <value>
                <fullName>Social Networking</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Strategy Guide</fullName>
            </value>
            <value>
                <fullName>Themes</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Web Browsers</fullName>
            </value>
            <value>
                <fullName>Games</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>