force-app/main/default/objects/Opportunity/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <label>App Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Game</fullName>
                <default>true</default>
                <label>Game</label>
            </value>
            <value>
                <fullName>Non-Game</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>