force-app/main/default/objects/Opportunity/fields/App_Video_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Video_Type__c</fullName>
    <label>App Video Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Video</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>PSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>