force-app/main/default/objects/Opportunity/fields/Applied_Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Applied_Currency_Rate__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Currency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>