force-app/main/default/objects/Opportunity/fields/Apr_2020_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Apr_2020_Roll_Up__c</fullName>
    <description>Apr 2020 Forecast from Opportunity Products rolled up to Opportunity level</description>
    <label>Apr 2020 Accrual</label>
    <summarizedField>OpportunityLineItem.Apr_2020_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>