force-app/main/default/objects/Opportunity/fields/Aug_Accrual_Amt__c.field-meta.xml
<CustomField>
    <fullName>Aug_Accrual_Amt__c</fullName>
    <label>Aug 2020 Accrual</label>
    <summarizedField>OpportunityLineItem.Aug_2020_Rollup__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>