force-app/main/default/objects/Opportunity/fields/BAS__c.field-meta.xml
<CustomField>
    <fullName>BAS__c</fullName>
    <description>Business Approval from SCEI</description>
    <label>BAS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>