force-app/main/default/objects/Opportunity/fields/BAS_ID__c.field-meta.xml
<CustomField>
    <fullName>BAS_ID__c</fullName>
    <label>BAS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>