force-app/main/default/objects/Opportunity/fields/Base_Title__c.field-meta.xml
<CustomField>
    <fullName>Base_Title__c</fullName>
    <description>This is the name that will appear on the PlayStation Storefront</description>
    <label>Base Title</label>
    <length>62</length>
    <type>Text</type>
</CustomField>