force-app/main/default/objects/Opportunity/fields/Bill_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if SAP should bill the Account even if we&apos;re working with an Agency. If unchecked, will bill Agency if populated</inlineHelpText>
    <label>Bill Account</label>
    <type>Checkbox</type>
</CustomField>