force-app/main/default/objects/Opportunity/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identify the advertiser or account that should be billed for this opportunity</description>
    <inlineHelpText>Identify the advertiser or account that should be billed for this opportunity</inlineHelpText>
    <label>Bill-To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill-To)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>