force-app/main/default/objects/Opportunity/fields/Billable_Party__c.field-meta.xml
<CustomField>
    <fullName>Billable_Party__c</fullName>
    <description>Identifies the billable party. If there is an Agency, then Agency is billable party. If there is no Agency or if the &quot;Bill Account&quot; checkbox is checked, then the Account is the Billable Party</description>
    <formula>if(or(isblank( Agency_Name__c ), Bill_Account__c =TRUE), Account.Name ,   AgencyNameFormula__c  )</formula>
    <inlineHelpText>Identifies the billable party based on the presence of Agency and/or &quot;Bill Account&quot; is checked</inlineHelpText>
    <label>Billable Party</label>
    <type>Text</type>
</CustomField>