force-app/main/default/objects/Opportunity/fields/Bounty__c.field-meta.xml
<CustomField>
    <fullName>Bounty__c</fullName>
    <inlineHelpText>Enter bounty in currency here and terms in Other Business Terms section.</inlineHelpText>
    <label>Bounty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>