force-app/main/default/objects/Opportunity/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <inlineHelpText>Describe general business model.</inlineHelpText>
    <label>Business Model</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>