force-app/main/default/objects/Opportunity/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <inlineHelpText>Campaign identifier from Ad Server</inlineHelpText>
    <label>Freewheel Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>