force-app/main/default/objects/Opportunity/fields/CAS__c.field-meta.xml
<CustomField>
    <fullName>CAS__c</fullName>
    <description>Concept Approval Process with SCEI</description>
    <label>CAS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>