force-app/main/default/objects/Opportunity/fields/CAS_ID__c.field-meta.xml
<CustomField>
    <fullName>CAS_ID__c</fullName>
    <label>CAS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>