force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics/Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Art/Graphics</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Compiler</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>In-Game Advertising</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Peripheral</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>