force-app/main/default/objects/Opportunity/fields/Client_Partner__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Client_partners</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>