force-app/main/default/objects/Opportunity/fields/Client_Solutions_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Solutions_Manager_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( AdSales_CF_Client_Solutions_Manager__c )),  AdSales_CF_Client_Solutions_Manager__r.FirstName + &apos; &apos; + AdSales_CF_Client_Solutions_Manager__r.LastName, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Solutions Manager Name</label>
    <type>Text</type>
</CustomField>