force-app/main/default/objects/Opportunity/fields/ClientPartnerFormula__c.field-meta.xml
<CustomField>
    <fullName>ClientPartnerFormula__c</fullName>
    <formula>IF(NOT(ISBLANK( Client_Partner__c )),  Client_Partner__r.FirstName  + &apos; &apos; + Client_Partner__r.LastName, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Partner</label>
    <type>Text</type>
</CustomField>