force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason__c</fullName>
    <inlineHelpText>Select the main reason for why the opportunity was Close/Lost. If not listed, select Reason Not Listed/Other and provide more details in the Description field.</inlineHelpText>
    <label>Close/Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Customer cannot meet minimum budget</fullName>
            </value>
            <value>
                <fullName>2. Desire for reporting or data that we don&apos;t offer</fullName>
            </value>
            <value>
                <fullName>3. Desire for adtech functionality that we don&apos;t offer</fullName>
            </value>
            <value>
                <fullName>4. Products are too expensive</fullName>
            </value>
            <value>
                <fullName>5. Net Ads operational constraint - Creative</fullName>
            </value>
            <value>
                <fullName>6. Net Ads operational constraint - Finance</fullName>
            </value>
            <value>
                <fullName>7. Net Ads operational constraint - Legal</fullName>
            </value>
            <value>
                <fullName>8. Net Ads operational constraint - Other</fullName>
            </value>
            <value>
                <fullName>9. External operational constraint</fullName>
            </value>
            <value>
                <fullName>10. Reason Not Listed/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>