force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason_Category__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason_Category__c</fullName>
    <inlineHelpText>Select the primary reason for why the opportunity was Close/Lost. If not listed, select Reason Not Listed/Other and provide more details in the Description field</inlineHelpText>
    <label>Close/Lost Reason Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Customer cannot meet minimum budget</fullName>
            </value>
            <value>
                <fullName>2. Desire for reporting or data not currently offered</fullName>
            </value>
            <value>
                <fullName>3. Desire for adtech functionality not currently offered</fullName>
            </value>
            <value>
                <fullName>4. Value Proposition not compelling enough</fullName>
            </value>
            <value>
                <fullName>5. Operational constraint - Creative</fullName>
            </value>
            <value>
                <fullName>6. Operational constraint - Finance</fullName>
            </value>
            <value>
                <fullName>7. Operational constraint - Legal</fullName>
            </value>
            <value>
                <fullName>8. External operational constraint</fullName>
            </value>
            <value>
                <fullName>9. Reason Not Listed/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>