force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason_Description__c</fullName>
    <inlineHelpText>Provide additional details for why the opportunity was Close/Lost, any issues, and any specific advertiser/agency requests.</inlineHelpText>
    <label>Close/Lost Reason Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>