force-app/main/default/objects/Opportunity/fields/Consumer_Access__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Access__c</fullName>
    <description>Other devices where consumers can access the application.</description>
    <inlineHelpText>This section to be completed in &quot;Partnership Summary&quot; deck</inlineHelpText>
    <label>Consumer Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All web connected devices</fullName>
            </value>
            <value>
                <fullName>iOS devices</fullName>
            </value>
            <value>
                <fullName>Android devices</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>