force-app/main/default/objects/Opportunity/fields/Consumer_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Value_Proposition__c</fullName>
    <inlineHelpText>This is a section to be completed in &quot;Partnership Summary&quot; deck</inlineHelpText>
    <label>Consumer Value Proposition</label>
    <type>TextArea</type>
</CustomField>