force-app/main/default/objects/Opportunity/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <description>Date of first contact</description>
    <inlineHelpText>Date of first contact by Business Manager. If unknown, select Jan 1st.</inlineHelpText>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>