force-app/main/default/objects/Opportunity/fields/Create_Date_del_del__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_del_del__c</fullName>
    <description>Date of first contact</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>