force-app/main/default/objects/Opportunity/fields/Create_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project manager assigned and project created</description>
    <inlineHelpText>Please check box once project has been created. This removes this opportunity from the Opportunity report to the Project report.</inlineHelpText>
    <label>Create Project</label>
    <type>Checkbox</type>
</CustomField>