force-app/main/default/objects/Opportunity/fields/Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount__c</fullName>
    <label>Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>