force-app/main/default/objects/Opportunity/fields/Dev_Tool_Description_Model__c.field-meta.xml
<CustomField>
    <fullName>Dev_Tool_Description_Model__c</fullName>
    <label>Dev Tool Description / Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>