force-app/main/default/objects/Opportunity/fields/Developer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comment__c</fullName>
    <label>Developer Comment</label>
    <type>TextArea</type>
</CustomField>